<resources>
    <string name="app_name">Scope Adjustment Calculator</string>
    <string name="distance_to_target">Distance to Target</string>
    <string name="enter_distance_to_target">Enter Distance to Target</string>
    <string name="distance_to_move_impacts_x">Distance to Move Impacts in Horizontal X Axis</string>
    <string name="distance_to_move_impacts_y">Distance to Move Impacts in Vertical Y Axis</string>
    <string name="enter_distance_to_move_impacts_x">Enter Distance to Move Impacts in Horizontal X Axis</string>
    <string name="enter_distance_to_move_impacts_y">Enter Distance to Move Impacts in Vertical Y Axis</string>
    <string name="scope_adjustment_clicks">Scope Adjustment Clicks</string>
    <string name="build_number">Build v0.05</string>
    <string name="Ossey">Ossey Studios</string>

    <string-array name="adjustment_options">
        <item>1/4 MoA</item>
        <item>1/2 MoA</item>
        <item>1 MoA</item>
        <item>0.1 MRAD</item>
        <item>0.1 MIL</item>
    </string-array>

    <string-array name="distance_unit_options">
        <item>Meters</item>
        <item>Yards</item>
        <item>Feet</item>
    </string-array>

    <string-array name="impact_unit_options">
        <item>Millimeters</item>
        <item>Centimeters</item>
        <item>Inches</item>
    </string-array>
</resources>