<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scope_adjustment_clicks"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/adjustmentSpinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/adjustment_options" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_to_target"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/distanceEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_distance_to_target"
            android:inputType="numberDecimal"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/distanceUnitSpinner"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:entries="@array/distance_unit_options" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_to_move_impacts_x"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/impactEditTextX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            android:text="0" />

        <Spinner
            android:id="@+id/impactUnitSpinnerX"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:entries="@array/impact_unit_options" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_to_move_impacts_y"
        android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/impactEditTextY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            android:text="0" />

        <Spinner
            android:id="@+id/impactUnitSpinnerY"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:entries="@array/impact_unit_options"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/resultTextViewMoaHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resultTextViewClicksHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resultTextViewClicksRawHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/resultTextViewMoaVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resultTextViewClicksVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resultTextViewClicksRawVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buildTextView"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/build_number"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/OsseyTextView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/Ossey"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
